--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <hr/>
 
         <h3></h3><a href="./public/birthday-invite.html">My Birthday project</a></body><h3>
+            <h1>i am sumit sharma </h1>
         
         <img src="./assets/images/birthday-invite.png" height="300" width="300"/>
         
